# bunnies

./: .gitignore  .gitmodules  README.md  agents.yaml  browser_playwright.py  config.py  create_tasks.py  crew.py  goals.yaml  goals_models.py  hierarchical.py  models.py  requirements.txt  tasks.yaml  teams_models.py  tools.py
.devcontainer/: Dockerfile  devcontainer.json
graphs/: main.py  requirements.txt
graphs/src/: graph.py  nodes.py  state.py
graphs/src/crew/: agents.py  crew.py  tasks.py  tools.py
trip_planner/: README.md  main.py  pyproject.toml  requirements.txt  trip_agents.py  trip_tasks.py
trip_planner/tools/: browser_tools.py  calculator_tools.py  search_tools.py
